--- a/packages/atomic/src/components/commerce/atomic-commerce-pager/atomic-commerce-pager.mdx
+++ b/packages/atomic/src/components/commerce/atomic-commerce-pager/atomic-commerce-pager.mdx
@@ -1,4 +1,4 @@
-import {Canvas, ArgTypes, Meta, Title, Description} from '@storybook/blocks';
+import {Canvas, Markdown, ArgTypes, Meta, Title, Description, Controls, Primary, Stories, Subtitle} from '@storybook/blocks';
 import * as AtomicCommercePagerStories from './atomic-commerce-pager.new.stories';
 
 {/* Storybook provides a number of blocs to construct documentation pages */}
@@ -6,11 +6,28 @@ import * as AtomicCommercePagerStories from './atomic-commerce-pager.new.stories
 
 <Meta of={AtomicCommercePagerStories} />
 
+
 <Title />
+
+
 <Description />
+<Canvas
+  additionalActions={[
+    {
+      title: 'Open in GitHub',
+      onClick: () => {
+        window.open(
+          'https://github.com/coveo/ui-kit/blob/master/packages/atomic/src/components/commerce/atomic-commerce-pager/atomic-commerce-pager.ts',
+          '_blank'
+        );
+      },
+    },
+  ]}
+  of={AtomicCommercePagerStories.Default}
+/>
 
-<Canvas of={AtomicCommercePagerStories.Default} />
-
-## Properties
-
-<ArgTypes />
+```js
+import "@coveo/atomic/components/commerce/atomic-commerce-pager/atomic-commerce-pager.js";
+```
+<Controls />
+<Stories />
